--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,17 @@
  name: site-security-scan
-  on:
+ on: 
   push:
-      branches: [ master ]
-    pull_request:
-      branches: [ master ]
+   branches: [ master ]
+  pull_request:
+   branches: [ master ]
    
-
-jobs:
+ jobs:
   build:
     runs-on: Windows 10
-    steps:     
- name: OWASP ZAP Baseline Scan
+    steps:
+    - name: OWASP ZAP Baseline Scan
   # You may pin to the exact commit or the version.
   # uses: zaproxy/action-baseline@3aac1ff9578859a12d8b84c035f4e5394fe79f61
-  uses: zaproxy/action-baseline@v0.5.0
-  with:
-    target: 
-    # Relative path of the ZAP configuration file
-
-    allow_issue_writing: # optional, default is true
+      uses: zaproxy/action-baseline@v0.5.0
+      with:
+       target:  "https://your-website.com/"
