--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -1,4 +1,4 @@
- name: site-security-Full-scan
+ name: site-security-full-scan
  on: 
    push:
     branches: [ main ]
@@ -11,7 +11,7 @@
     steps:
     - name: OWASP ZAP Full Scan
   # You may pin to the exact commit or the version.
-  # uses: zaproxy/action-baseline@3aac1ff9578859a12d8b84c035f4e5394fe79f61
+
       uses: zaproxy/action-full-scan@v0.3.0
       with:
        target:  "https://www.google.com/"
