--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,5 @@
   # uses: zaproxy/action-baseline@3aac1ff9578859a12d8b84c035f4e5394fe79f61
       uses: zaproxy/action-baseline@v0.5.0
       with:
+       docker_name: owasp/zap2docker-stable
        target:  "http://sakamor-web-staging-kf-asd-sakamor-staging.apps.alpha.kalbe.co.id/"
