--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -14,4 +14,5 @@
 
       uses: zaproxy/action-full-scan@v0.3.0
       with:
+       docker_name: owasp/zap2docker-weekly
        target:  "https://www.google.com/"
