--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@
       uses: zaproxy/action-baseline@v0.5.0
       with:
        docker_name: owasp/zap2docker-weekly
-       target:  "http://sakamor.sakafarma.com/"
+       target:  "https://sakamor.vercel.app/"
